--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "web-tv",
   "version": "1.0.0",
-  "description": "",
+  "description": "a webpage for news on TV",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --devtool eval --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,29 @@
   "bugs": {
     "url": "https://github.com/LinYunWen/web-tv/issues"
   },
-  "homepage": "https://github.com/LinYunWen/web-tv#readme"
+  "homepage": "https://github.com/LinYunWen/web-tv#readme",
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "reactstrap": "^8.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
