--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
-.DS_Store
-.vscode
-node_modules
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-build/*
-dist/*
-src/backend/key/*
+# IntelliJ
+.idea
+
+# Vscode
+.vscode/
+
+# Source maps
+*.js.map
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
